compiler/tests/compiler/must_fail/t_06.mil.exp.err
tests/compiler/must_fail/t_06.mil:5:4: 5:6 error: duplicate function name :foo
fn foo(x : stack u64);
   ^^^
